--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,14 @@ pyyaml>=6.0.0
 matplotlib>=3.8.0
 seaborn>=0.13.0
 
+# Web Application (Streamlit)
+streamlit>=1.28.0
+
+# REST API (FastAPI)
+fastapi>=0.104.0
+uvicorn>=0.24.0
+python-multipart>=0.0.6
+
 # Jupyter Notebook (optional)
 jupyter>=1.0.0
 ipywidgets>=8.0.0
